--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,13 +23,23 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'androidx.appcompat:appcompat:1.3.1'
+    implementation 'androidx.appcompat:appcompat:1.4.1'
+    implementation 'androidx.test.ext:junit:1.1.3'
+    implementation 'com.google.android.material:material:1.5.0'
+
     implementation 'androidx.room:room-runtime:+'
     annotationProcessor 'androidx.room:room-compiler:+'
+
+
     implementation 'androidx.lifecycle:lifecycle-extensions:+'
+    annotationProcessor "androidx.lifecycle:lifecycle-compiler:2.3.1"
+
     testImplementation 'junit:junit:4.13.2'
+
     androidTestImplementation 'androidx.test:runner:1.4.0'
     androidTestImplementation 'androidx.test:rules:1.4.0'
+    androidTestUtil 'androidx.test:orchestrator:1.4.1'
+    androidTestImplementation 'androidx.arch.core:core-testing:2.1.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
     implementation 'com.google.android.material:material:1.4.0'
