--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,7 +8,7 @@ android {
         targetSdkVersion 31
         versionCode 1
         versionName "1.0"
-        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
         release {
@@ -23,22 +23,18 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'androidx.appcompat:appcompat:1.4.1'
-    implementation 'androidx.test.ext:junit:1.1.3'
+    implementation 'androidx.appcompat:appcompat:1.3.1'
+    implementation 'androidx.room:room-runtime:2.4.0'
     implementation 'com.google.android.material:material:1.5.0'
-
-    implementation 'androidx.room:room-runtime:+'
-    annotationProcessor 'androidx.room:room-compiler:+'
-
-
-    implementation 'androidx.lifecycle:lifecycle-extensions:+'
-    annotationProcessor "androidx.lifecycle:lifecycle-compiler:2.3.1"
+    implementation 'androidx.test.ext:junit:1.1.3'
+    implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
 
     testImplementation 'junit:junit:4.13.2'
 
     androidTestImplementation 'androidx.test:runner:1.4.0'
     androidTestImplementation 'androidx.test:rules:1.4.0'
-    androidTestUtil 'androidx.test:orchestrator:1.4.1'
+
+
     androidTestImplementation 'androidx.arch.core:core-testing:2.1.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
