--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,6 +25,7 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'androidx.appcompat:appcompat:1.3.1'
     implementation 'androidx.room:room-runtime:2.4.0'
+    annotationProcessor 'androidx.room:room-compiler:2.4.0'
     implementation 'com.google.android.material:material:1.5.0'
     implementation 'androidx.test.ext:junit:1.1.3'
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
