--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,10 +9,12 @@ android {
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        testInstrumentationRunnerArguments clearPackageData: 'true'
     }
+
     buildTypes {
         release {
-            minifyEnabled false
+            minifyEnabled true
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
@@ -24,20 +26,21 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'androidx.appcompat:appcompat:1.3.1'
-    implementation 'androidx.room:room-runtime:2.4.0'
-    annotationProcessor 'androidx.room:room-compiler:2.4.0'
     implementation 'com.google.android.material:material:1.5.0'
     implementation 'androidx.test.ext:junit:1.1.3'
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
 
+    //TEST
     testImplementation 'junit:junit:4.13.2'
-
-    androidTestImplementation 'androidx.test:runner:1.4.0'
     androidTestImplementation 'androidx.test:rules:1.4.0'
-
-
-    androidTestImplementation 'androidx.arch.core:core-testing:2.1.0'
+    androidTestImplementation 'androidx.test:runner:1.4.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    androidTestImplementation 'androidx.arch.core:core-testing:2.1.0'
+    androidTestUtil 'androidx.test:orchestrator:1.2.0'
+
+    //ROOM
+    implementation 'androidx.room:room-runtime:2.4.0'
+    annotationProcessor 'androidx.room:room-compiler:2.4.0'
 
     implementation 'com.google.android.material:material:1.4.0'
 }
